--- a/sled_data/templates/sled_data/generic_image_detail.html
+++ b/sled_data/templates/sled_data/generic_image_detail.html
@@ -16,7 +16,7 @@
     <tr><td>Info:</td><td>{{ generic_image.info|default:"-" }}</td></tr>
   </table>
   
-  <img src="{{ generic_image.image.url }}" style="width:100%">
+  <img src="{{ generic_image.image.url }}" class="full-width">
 
 </div>
 {% endblock content %}
