--- a/sled_data/templates/sled_data/imaging_detail.html
+++ b/sled_data/templates/sled_data/imaging_detail.html
@@ -28,8 +28,10 @@
   {% else %}
 
 
-  <img src="{{ imaging.image.url }}" style="width:100%">
+  <img src="{{ imaging.image.url }}" class="full-width">
   {% endif %}
 
 </div>
 {% endblock content %}
+
+
