--- a/sled_data/templates/sled_data/data_update_many.html
+++ b/sled_data/templates/sled_data/data_update_many.html
@@ -45,7 +45,7 @@
 			{% endif %}
 		      </h3>
                     </td>
-                    <td class="sled-delete-button" style="float:right;"></td>
+                    <td class="sled-delete-button float-right"></td>
                   </tr>
                 </table>
 
@@ -100,7 +100,7 @@
                       <div>
                         <table class="jb-paragraph-2">
 			  <tr>
-			    <td colspan="1" style="text-align:center">
+			    <td colspan="1" class="align-center">
                               {% if form.instance.image %}
                               <img class="sled-mugshot-image" src="{{ form.instance.image.url }}" alt="Image">
                               {% else %}
@@ -109,7 +109,7 @@
 			    </td>
 			  </tr>
                           <tr>
-                            <td style="text-align:center">
+                            <td class="align-center">
 			      {{ form.image.errors }}
                               {{ form.image }}
 			    </td>
@@ -145,26 +145,15 @@
 
 
 
+{% block extrastyles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster.bundle.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster-sideTip-shadow.min.css' %}" />
+{% endblock extrastyles %}
+
+
 
 {% block extrascripts %}
+<script type="text/javascript" src="{% static 'js/tooltipster.bundle.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/set_help.js' %}"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    function readURL(input, $img) {
-      if (input.files && input.files[0]) {
-        var reader = new FileReader();
-        reader.onload = function(e) {
-          $img.attr('src', e.target.result);
-        }
-        reader.readAsDataURL(input.files[0]);
-      }
-    }
-    $(document).on("change", "input[name*='image']", function() {
-      var $img = $(this).parent().parent().parent().find('img');
-      readURL(this, $img);
-    });
-
-      set_help();
-  });
-</script>
+<script type="text/javascript" src="{% static 'sled_data/js/data_update_many.js' %}"></script>
 {% endblock extrascripts %}
