--- a/sled_data/templates/sled_data/spectrum_detail.html
+++ b/sled_data/templates/sled_data/spectrum_detail.html
@@ -26,7 +26,7 @@
   {% if spectrum.future %}
   Future
   {% else %}
-  <img src="{{ spectrum.image.url }}" style="width:100%">
+  <img src="{{ spectrum.image.url }}" class="full-width">
   {% endif %}
 
 </div>
