--- a/sled_persistent_message/templates/sled_persistent_message/message_list.html
+++ b/sled_persistent_message/templates/sled_persistent_message/message_list.html
@@ -85,7 +85,7 @@
 
 
   
-  <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_persistent_message:message-create' %}">
+  <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_persistent_message:message-create' %}" data-sled-onload="set_modal_message_create">
     <img src="{% static 'icons/plus.svg' %}">
     Create new message
   </button>
@@ -95,8 +95,8 @@
 
 
 {% block extrastyles %}
-<link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 {% endblock extrastyles %}
 
 
@@ -104,16 +104,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha384-EZJUCwX9EfOmrML5/1WejmhFx/azi54nnVfOndPu+VTQKOHabXXC9eS7VFdkLz0V" crossorigin="anonymous"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js" integrity="sha512-ux1VHIyaPxawuad8d1wr1i9l4mTwukRq5B3s8G3nEmdENnKF5wKfOV6MEUH0k/rNT4mFr/yL+ozoDiwhUQekTg==" crossorigin="anonymous"></script>
-<script type="text/javascript">
-  $(document).ready(function(){
-      // Modals
-      $(".sled-modal").each(function() {
-          $(this).modalForm({
-              formURL: $(this).data("form-url"),
-              modalID: "#id-modal"
-          });
-      });
-  });
-</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js" integrity="sha512-ux1VHIyaPxawuad8d1wr1i9l4mTwukRq5B3s8G3nEmdENnKF5wKfOV6MEUH0k/rNT4mFr/yL+ozoDiwhUQekTg==" crossorigin="anonymous"></script>
+<script src="{% static 'sled_persistent_message/js/message_create.js' %}"></script>
+<script src="{% static 'sled_persistent_message/js/message_list.js' %}"></script>
 {% endblock extrascripts %}
